[package]
name = "weather-station"
version = "0.1.0"
authors = ["Eric <ericschaal@icloud.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[features]
default = ["std", "embassy", "display-simulator", "esp-idf-svc/native"]
display-simulator = []
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-hal = { version = "0.42.5", default-features = false }
esp-idf-sys = {version = "0.33.7", default-features = false}
embedded-svc = {version = "0.26.4", default-features = false}

anyhow = "1.0.75"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0-alpha.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml-cfg = "0.1.3"

u8g2-fonts = { version = "0.4.0", features = ["std", "embedded_graphics_textstyle"] }
tinyqoi = "0.2.0"
time = { version = "0.3.30", features = ["std", "formatting"] }
itertools = "0.12.0"
thiserror = "1.0"
lazy_static = "1.4.0"

[build-dependencies]
embuild = "0.31.3"
bindgen = "0.69.1"
